# csc299-project

./: .gitignore  SUMMARY.md  Summary.md  aiconversations.txt  et Enter  main.py  video.txt
finalproject/: CONVERSATION_TRANSCRIPT.txt  README.md  pkms_cli.py  requirements.txt
finalproject/.github/workflows/: ci.yml
finalproject/.specify/memory/: constitution.md
finalproject/.specify/templates/: plan-template.md  tasks-template.md
finalproject/pkms/: __init__.py  agent.py  cli.py  models.py  storage.py
finalproject/specs/001-pkms-task-agent/: plan.md  spec.md  tasks.md
finalproject/tests/: test_agent.py  test_agent_integration.py  test_cli.py  test_storage.py  test_tasks_search.py
tasks1/: README.md  distrait.py
tasks2/: README.md  distrait_tasks.json  distraitv2.py
tasks3/: pyproject.toml  tasks2code.py
tasks3/src/tasks3/: __init__.py  tasks2code.py
tasks4/: pyproject.toml
tasks4/src/tasks4/: cctest4.py
tasks5/: .gitignore  .ruff.toml  CHANGELOG.md  README.md  pyproject.toml
tasks5/.github/workflows/: ci.yml
tasks5/.specify/memory/: constitution.md
tasks5/.specify/templates/: plan-template.md  tasks-template.md
tasks5/specs/1-names-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tasks5/specs/1-names-cli/checklists/: requirements.md
tasks5/specs/1-names-cli/contracts/: cli-contract.md
tasks5/src/names_cli/: __init__.py  cli.py  storage.py
tasks5/tests/integration/: test_cli_add_list.py  test_cli_list_order.py
tasks5/tests/unit/: test_storage_add.py  test_storage_sort.py
(+2 files in other folders)
