[tool.poetry]
name = "names2-cli"
version = "0.1.0"
description = "Small CLI to store and list names locally"
authors = ["names2 <dev@local>"]
packages = [{include = "names_cli", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.14,<4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
ruff = "^0.15.0"
black = "^24.0"
click = "^8.1" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
